crates/provider-tests/tests/snapshots/provider_harness__adaptivecard_translation_snapshot_slack__adaptivecard_basic.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 862
expression: value
---
{
  "body": {
    "attachments": [
      {
        "text": "card:basic"
      }
    ],
    "blocks": [
      {
        "text": {
          "text": "Adaptive card basic content",
          "type": "mrkdwn"
        },
        "type": "section"
      }
    ],
    "channel": "",
    "metadata": {
      "actions": [
        "open_url"
      ]
    },
    "text": "Adaptive card basic content"
  },
  "content_type": "application/json",
  "metadata": null,
  "warnings": []
}
